[package]
name = "df-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "df-proxy"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
hyper = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
rustls = { workspace = true }
hyper-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
